Minor fix to align icons

--- a/src/styles/main.pcss
+++ b/src/styles/main.pcss
@@ -82,6 +82,7 @@ body {
     }
 
     & i {
+      top: 0;
       padding-left: 0;
     }
   }
